--- a/src/Components/Cart/Cart.css
+++ b/src/Components/Cart/Cart.css
@@ -13,3 +13,13 @@
     width: 100%;
     border-radius: 10px;
 }
+
+
+
+@media screen and (max-width:900px) {
+    
+    .cart{
+        grid-template-columns: 1fr;
+        text-align: center;
+    }
+}
