--- a/src/Components/Food/Food.css
+++ b/src/Components/Food/Food.css
@@ -11,7 +11,8 @@
 }
 .food button{
     border: 0;
-    padding: 10px 15px;
+    margin: 20px 0;
+    padding: 10px 25px;
     background-color: darkorange;
     color: white;
     font-weight: 600;
