--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -1,9 +1,10 @@
 .header{
-    width: 90%;
     height: 80px;
-    margin: 0 auto;
+    background-color: darkorange;
 }
 .nav{
+    margin: 0 auto;
+    width: 90%;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -13,13 +14,36 @@
     align-items: center;
 }
 .nav a{
+    color: #fff;
     text-decoration: none;
     font-weight: 600;
     font-size: 15px;
     margin-right: 30px;
-    color: black;
+}
+.nav h2{
+    
+    color: #fff;
 }
 .nav button{
     background-color: transparent;
     border-radius: 10px;
+    padding: 10px ;
+    font-weight: 600;
+    color: #fff;
+}
+.nav button:hover{
+    color: darkorange;
+    background-color: #fff;
+
+}
+
+
+@media screen and (max-width:550px) {
+    
+.nav{
+    width: 90%;
+}
+.nav ul{
+    display: none;
+}
 }
